@@ -96,6 +96,7 @@
 			<li>region full fallback <span class="regionFullFallback">1000</span></li>
 			<li>setting multiple destinations <span class="multiDest multiDest1">1000</span> - <span class="multiDest multiDest2">1000</span></li>
 			<li>issue #11 <span class="blankShouldBeBlank"></span></li>
+			<li>issue #13 <span class="floatToCommaDecimal">33195.5</span></li>
 		</ol>
 		
 		<h5>default (English - US)</h5>
