@@ -12,3 +12,4 @@ Changes in v1.2
 - Added format_as_you_type demo page (from Emmanuel Sambo)
 - Fixed issue #11 blank should equal blank
 - Fixed bug #12 and added unit test (negativeFormatDecimal) to support
+- Fixed bug #13 and added a check for a float value
